--- a/Orel-moto/app/sass/layout/header.scss
+++ b/Orel-moto/app/sass/layout/header.scss
@@ -50,6 +50,9 @@ h1 {
 	font-weight: bold;
 	letter-spacing: 1px;
 	margin-right: rem(40px);
+	@include smart {
+		margin-right: rem(20px);
+	}
 	@include mobile {
 		margin-right: rem(5px);
 	}
@@ -76,6 +79,9 @@ h1 {
 	color: #fff;
 	font-family: Roboto;
 	font-size: rem(14px);
+	@include smart {
+		padding-left: rem(20px);
+	}
 	@include mobile {
 		padding-left: 5px;
 		display: none;
