--- a/Orel-moto/app/sass/layout/top-menu.scss
+++ b/Orel-moto/app/sass/layout/top-menu.scss
@@ -18,6 +18,12 @@
 
 .top-menu__item {
 	margin: 0 40px;
+	&:first-child {
+		margin: 0;
+	}
+	&:last-child {
+		margin: 0;
+	}
 	@include tablets {
 		margin: 0 10px;
 	}
